--- a/about.html
+++ b/about.html
@@ -338,9 +338,11 @@
           <li class="nav-item"><a class="nav-link" href="scholarships.html">Scholarships</a></li>
           <li class="nav-item"><a class="nav-link" href="guides.html">Guides</a></li>
           <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="chatbot.html">Chat Assistant</a></li>
           <li class="nav-item"><a class="nav-link btn btn-outline-light ms-2 px-4" href="login.html">Login</a></li>
+        </ul>
         </ul>
       </div>
     </div>
