--- a/contact.html
+++ b/contact.html
@@ -347,7 +347,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <i class="fas fa-graduation-cap me-2"></i>ScholarshipPortal
+        <img src="assets/img/logo.png" alt="Test Logo" width="110">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -359,8 +359,10 @@
           <li class="nav-item"><a class="nav-link" href="guides.html">Guides</a></li>
           <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link active" href="chatbot.html">Chat Assistant</a></li>
           <li class="nav-item"><a class="nav-link btn btn-outline-light ms-2 px-4" href="login.html">Login</a></li>
+        </ul>
         </ul>
       </div>
     </div>
